wordpress-hhvm/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    app: wordpress
    deploymentconfig: wordpress
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: wordpress
        deploymentconfig: wordpress
    spec:
      volumes:
        -
          name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-data
      containers:
      - image: wordpress/wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        volumeMounts:
            -
              name: wordpress-data
              mountPath: /app
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - wordpress
      from:
        kind: ImageStreamTag
        name: wordpress:latest
    type: ImageChange
