wordpress-hhvm/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: wordpress
    deploymentconfig: wordpress
  sessionAffinity: None
  type: ClusterIP
