wordpress-hhvm/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: wordpress
spec:
  to:
    kind: Service
    name: wordpress
